2001-06-28  Bharat Mediratta  <bharat@menalto.com>

	* Added a major hack to get the Gallery style sheet into Nuke.  Nuke 
	  owns the header and doesn't allow anything else to dink with it. 
	  We open Nuke's header.php file and rewrite its code to slip our 
	  style sheet in at the end. 

	* Checked in fix for bug #437039.  We were using an absolute popup
	  url for photo properties, instead of a relative one.

	* Gallery is now a PHP-Nuke 5.0 module!  This required a lot of
	  tweaks all over the system, so there will probably be some small
	  breakages.  However, you can now put your gallery in the modules
	  directory of your PHP-Nuke 5.0 site and it will appear
	  automagically in the Nuke modules list.

	  NOTE:  In order to do this we had to modify some of the default
	  wrapper code, so if you've defined your own custom html_wrap
	  files, you'll need to make sure that you look at the new default
	  files and suck in the changes found there (or your Gallery won't
	  work as a Nuke plugin).

2001-06-27  Bharat Mediratta  <bharat@menalto.com>

	* Completely change the way that we handle session variables.  In
	  the past we allowed them to be globals, but unfortunately there
	  were conflicts in the global namespace with applications such as
	  PHP-nuke.  Instead I've taken all global/session variables and
	  put them inside a global stdClass called $gallery.  Let us all
	  pray that no major PHP project uses that variable (if they do,
	  we can rename it but it will be painful).  The upshot: Gallery
	  is now one giant step closer to working with PHP-nuke

	* Created the UPGRADING doc.  It needs more content.

	* Separated the .htaccess and mod_rewrite code in the config
	  wizard.  If you don't have the appropriate overrides set in
	  Apache, you may get a 403 when you first try to run the wizard.
	  You can fix this by removing the php_value lines from the
	  setup/.htaccess file.  In the past, the wizard would *still* put