@@ -1,0 +1,25 @@
+<?
+// This is the default gallery footer (for the main gallery
+// page: albums.php). It's companion is gallery.header.default.
+//
+// To override this header, create a file called gallery.footer
+// in this directory.
+//
+// NOTE: This header gets inserted above the </body> tag.
+//
+// Some tips:
+// * Some application variables:
+//      - Gallery Title: $app->galleryTitle
+// * Gallery developers would appreciate you promoting the Gallery code
+//   a little. Use the following code snippet to display the current
+//   Gallery version linked to the Gallery home page.
+//
+?>
+
+<br>
+
+<!-- The Gallery code version number, linked to the Gallery home page -->
+<span align="right" class="fineprint">
+<a href=<?= $gallery->url ?>>Gallery v<?= $gallery->version ?></a>
+</span>
+
