@@ -1,5 +1,5 @@
 <? 
 $gallery->version = "1.1-cvs";
-$gallery->config_version = 19;
+$gallery->config_version = 20;
 $gallery->url = "http://gallery.sourceforge.net";
 ?>
