@@ -1,3 +1,9 @@
+2001-06-28 John Kirkland <jpk@bl.org>
+	* Added search functionality to Gallery.  If configured on, a
+	  search text box will appear on the main gallery screen.
+	  It searches Album Titles and Descriptions and Photo Captions.
+
+
 2001-06-28  Bharat Mediratta  <bharat@menalto.com>
 
 	* Added a major hack to get the Gallery style sheet into Nuke.  Nuke 
